--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^14.4.0",
     "typescript": "^5"
   },
   "engines": {
