--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "tests": "cypress run --spec \"cypress/e2e/user.spec.cy.js,cypress/e2e/editor.spec.cy.js,cypress/e2e/author.spec.cy.js\"",
+    "test-user": "cypress run --spec \"cypress/e2e/user.spec.cy.js\"",
+    "test-editor": "cypress run --spec \"cypress/e2e/editor.spec.cy.js\"",
+    "test-author": "cypress run --spec \"cypress/e2e/author.spec.cy.js\""
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.12.3",
