--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main, feature-ci-pipe]
+    branches: [main, feature-ci-pipe, feature*]
   pull_request:
-    branches: [main]
+    branches: [main, feature-ci-pipe, feature*]
 
 jobs:
   test:
