--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry",
-    "tests": "cypress run --spec \"cypress/e2e/user.spec.cy.js,cypress/e2e/editor.spec.cy.js,cypress/e2e/author.spec.cy.js\"",
+    "test:e2e": "cypress run --headless --spec \"cypress/e2e/user.spec.cy.js,cypress/e2e/editor.spec.cy.js,cypress/e2e/author.spec.cy.js\"",
+    "ci:e2e": "start-server-and-test dev http://localhost:1337 npm run test:e2e",
     "test-user": "cypress run --spec \"cypress/e2e/user.spec.cy.js\"",
     "test-editor": "cypress run --spec \"cypress/e2e/editor.spec.cy.js\"",
     "test-author": "cypress run --spec \"cypress/e2e/author.spec.cy.js\""
@@ -36,7 +37,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cypress": "^14.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "start-server-and-test": "^2.0.4"
   },
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
