ci: change to use start so develop do not hot reload

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,8 @@ jobs:
           echo "DATABASE_CLIENT=sqlite" >> .env
           echo "DATABASE_FILENAME=.tmp/data.db" >> .env
 
+      - name: Build admin UI
+        run: npm run build
+
       - name: Run e2e tests
         run: npm run ci:e2e
