--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry",
     "test:e2e": "cypress run --headless --spec \"cypress/e2e/user.spec.cy.js,cypress/e2e/editor.spec.cy.js,cypress/e2e/author.spec.cy.js\"",
-    "ci:e2e": "start-server-and-test dev http://localhost:1337 test:e2e",
+    "ci:e2e": "start-server-and-test start http://localhost:1337 test:e2e",
     "test-user": "cypress run --spec \"cypress/e2e/user.spec.cy.js\"",
     "test-editor": "cypress run --spec \"cypress/e2e/editor.spec.cy.js\"",
     "test-author": "cypress run --spec \"cypress/e2e/author.spec.cy.js\""
