--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [main, feature-ci-pipe, feature*]
   pull_request:
     branches: [main, feature-ci-pipe, feature*]
+  workflow_dispatch:
 
 jobs:
   test:
@@ -41,3 +42,34 @@ jobs:
 
       - name: Run e2e tests
         run: npm run ci:e2e
+
+  publish-docker:
+    name: Publish Docker Image
+    runs-on: ubuntu-latest
+    needs: [test, build]
+    if: github.event_name == 'workflow_dispatch'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-strapi:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-strapi:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
