inicia build strapi

--- a/.github/workflows/testes-e2e.yaml
+++ b/.github/workflows/testes-e2e.yaml
@@ -21,6 +21,9 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
+      - name: Build Strapi
+        run: npm run build
+
       - name: Start Strapi
         run: npm run start
 
