--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test-user": "cypress run --spec \"cypress/e2e/user.spec.cy.js\"",
     "test-editor": "cypress run --spec \"cypress/e2e/editor.spec.cy.js\"",
     "test-author": "cypress run --spec \"cypress/e2e/author.spec.cy.js\"",
-    "ci:e2": "start-server-and-test start http://localhost:1337 tests"
+    "ci:e2e": "start-server-and-test start http://localhost:1337 tests"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.12.3",
