--- a/.github/workflows/testes-e2e.yml
+++ b/.github/workflows/testes-e2e.yml
@@ -2,9 +2,9 @@ name: Testes e2e
 
 on:
   push:
-    branches: [ master, * ]
+    branches: ["**"]
   pull_request:
-    branches: [ master, * ]
+    branches: ["**"]
   workflow_dispatch:
 
 jobs:
