--- a/.github/workflows/testes-e2e.yml
+++ b/.github/workflows/testes-e2e.yml
@@ -43,6 +43,38 @@ jobs:
       - name: Run e2e tests
         run: npm run ci:e2e
 
+  build:
+    name: Build Strapi
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Create .env file
+        run: |
+          echo "HOST=0.0.0.0" > .env
+          echo "PORT=1337" >> .env
+          echo "APP_KEYS=$(openssl rand -base64 32),$(openssl rand -base64 32)" >> .env
+          echo "API_TOKEN_SALT=$(openssl rand -base64 32)" >> .env
+          echo "ADMIN_JWT_SECRET=$(openssl rand -base64 32)" >> .env
+          echo "TRANSFER_TOKEN_SALT=$(openssl rand -base64 32)" >> .env
+          echo "JWT_SECRET=$(openssl rand -base64 32)" >> .env
+          echo "DATABASE_CLIENT=sqlite" >> .env
+          echo "DATABASE_FILENAME=.tmp/data.db" >> .env
+
+      - name: Build Strapi
+        run: npm run build
+
   publish-docker:
     name: Publish Docker Image
     runs-on: ubuntu-latest
