--- a/.github/workflows/testes-e2e.yml
+++ b/.github/workflows/testes-e2e.yml
@@ -75,10 +75,26 @@ jobs:
       - name: Build Strapi
         run: npm run build
 
+  manual-approval:
+    name: Await Manual Approval
+    runs-on: ubuntu-latest
+    needs: [test, build]
+    permissions:
+      issues: write
+    steps:
+      - name: Await Manual Approval
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: user1,user2 # replace with actual GitHub usernames or teams
+          minimum-approvals: 1
+          issue-title: "Approve Docker Publish"
+          issue-body: "Please comment 'approve' or 'deny' to proceed."
+
   publish-docker:
     name: Publish Docker Image
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [manual-approval]
     if: github.event_name == 'workflow_dispatch'
 
     steps:
