--- a/.github/workflows/testes-e2e.yml
+++ b/.github/workflows/testes-e2e.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["**"]
   pull_request:
-    branches: ["**"]
+    branches: [master, main]
   workflow_dispatch:
 
 jobs:
@@ -95,7 +95,6 @@ jobs:
     name: Publish Docker Image
     runs-on: ubuntu-latest
     needs: [manual-approval]
-    if: github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout code
