--- a/.github/workflows/testes-e2e.yml
+++ b/.github/workflows/testes-e2e.yml
@@ -86,7 +86,7 @@ jobs:
         uses: trstringer/manual-approval@v1
         with:
           secret: ${{ github.TOKEN }}
-          approvers: Castrozan
+          approvers: Castrozan, thiagoDimon
           minimum-approvals: 1
           issue-title: "Approve Docker Publish"
           issue-body: "Please comment 'approve' or 'deny' to proceed."
