--- a/.github/workflows/testes-e2e.yml
+++ b/.github/workflows/testes-e2e.yml
@@ -120,3 +120,81 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/devops-strapi:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  aws-approval:
+    name: Await AWS Deployment Approval
+    runs-on: ubuntu-latest
+    needs: [publish-docker]
+    permissions:
+      issues: write
+    steps:
+      - name: Await AWS Deployment Approval
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: Castrozan, thiagoDimon
+          minimum-approvals: 1
+          issue-title: "Approve AWS Deployment"
+          issue-body: "Please comment 'approve' or 'deny' to deploy to AWS."
+
+  deploy-aws:
+    name: Deploy to AWS
+    runs-on: ubuntu-latest
+    needs: [aws-approval]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.0"
+
+      - name: Generate secrets
+        id: secrets
+        run: |
+          echo "app_keys=$(openssl rand -base64 32),$(openssl rand -base64 32)" >> $GITHUB_OUTPUT
+          echo "api_token_salt=$(openssl rand -base64 32)" >> $GITHUB_OUTPUT
+          echo "admin_jwt_secret=$(openssl rand -base64 32)" >> $GITHUB_OUTPUT
+          echo "transfer_token_salt=$(openssl rand -base64 32)" >> $GITHUB_OUTPUT
+          echo "jwt_secret=$(openssl rand -base64 32)" >> $GITHUB_OUTPUT
+
+      - name: Terraform Init
+        working-directory: ./terraform
+        run: terraform init
+
+      - name: Terraform Plan
+        working-directory: ./terraform
+        run: |
+          terraform plan \
+            -var="docker_image=${{ secrets.DOCKERHUB_USERNAME }}/devops-strapi:${{ github.sha }}" \
+            -var="app_keys=${{ steps.secrets.outputs.app_keys }}" \
+            -var="api_token_salt=${{ steps.secrets.outputs.api_token_salt }}" \
+            -var="admin_jwt_secret=${{ steps.secrets.outputs.admin_jwt_secret }}" \
+            -var="transfer_token_salt=${{ steps.secrets.outputs.transfer_token_salt }}" \
+            -var="jwt_secret=${{ steps.secrets.outputs.jwt_secret }}"
+
+      - name: Terraform Apply
+        working-directory: ./terraform
+        run: |
+          terraform apply -auto-approve \
+            -var="docker_image=${{ secrets.DOCKERHUB_USERNAME }}/devops-strapi:${{ github.sha }}" \
+            -var="app_keys=${{ steps.secrets.outputs.app_keys }}" \
+            -var="api_token_salt=${{ steps.secrets.outputs.api_token_salt }}" \
+            -var="admin_jwt_secret=${{ steps.secrets.outputs.admin_jwt_secret }}" \
+            -var="transfer_token_salt=${{ steps.secrets.outputs.transfer_token_salt }}" \
+            -var="jwt_secret=${{ steps.secrets.outputs.jwt_secret }}"
+
+      - name: Get Application URL
+        working-directory: ./terraform
+        run: |
+          echo "Application deployed successfully!"
+          echo "URL: $(terraform output -raw app_url)"
