--- a/.github/workflows/testes-e2e.yml
+++ b/.github/workflows/testes-e2e.yml
@@ -3,8 +3,6 @@ name: Testes e2e
 on:
   push:
     branches: ["**"]
-  pull_request:
-    branches: [master, main]
   workflow_dispatch:
 
 jobs:
@@ -86,7 +84,7 @@ jobs:
         uses: trstringer/manual-approval@v1
         with:
           secret: ${{ github.TOKEN }}
-          approvers: Castrozan, thiagoDimon
+          approvers: Castrozan
           minimum-approvals: 1
           issue-title: "Approve Docker Publish"
           issue-body: "Please comment 'approve' or 'deny' to proceed."
