--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ terraform/.terraform/
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
+terraform/terraform.tfstate.lock.info
