--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,8 @@ build
 package-lock.json
 
 terraform/.terraform/
+terraform/.terraform*
 terraform/.terraform.lock.hcl
-terraform/terraform.tfstate
+terraform/terraform.tfstate.*
 terraform/terraform.tfstate.backup
-terraform/terraform.tfstate.lock.info
+.terraform.tfstate.lock.info
