--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,6 @@ terraform/.terraform/
 terraform/.terraform*
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate.*
+terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
-.terraform.tfstate.lock.info
+terraform/.terraform.tfstate.lock.info
